# binance-home-task

./: .dockerignore  Dockerfile  README.md  pyproject.toml
binance/: config.py  data.py  lib.py  main.py
