[tool.poetry]
name = "binance-home-task"
version = "0.1.0"
description = "Experiencing Binance"
authors = ["Umesh Poswal"]

[tool.poetry.dependencies]
python = "^3.9"
binance-connector = "^1.5.0"
prometheus-client = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
